# MetalFish

./: .gcloudignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CUDA_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md  README.md
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: copilot.md
.github/workflows/: benchmark.yml  ci.yml  cuda-gpu-gate.yml  cuda-release.yml  elo-tournament.yml  engine-tournament.yml  hybrid-regression.yml  lichess-puzzles.yml  portable-ci.yml  release.yml  windows-cuda-compile.yml  windows-cuda-runtime-gate.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_nn_comparison
build_debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  metalfish  metalfish_tests
cloudbuild/: cuda-entrypoint.yaml  linux-cpu.yaml
docs/: CUDA_ADVANCED_FEATURES.md  CUDA_OPTIMIZATIONS.md  apple_accelerator_experiments.md  cross_platform_backend_plan.md
docs/plans/: 2026-02-09-paper-rewrite.md  2026-03-13-mcts-rewrite.md  2026-03-13-paper-evaluation.md  2026-03-15-codebase-cleanup.md  2026-03-20-hybrid-rewrite-design.md  2026-03-20-hybrid-rewrite-plan.md  2026-03-20-mcts-lc0-parity-design.md  2026-03-20-mcts-lc0-parity-plan.md  2026-03-20-mcts-phase2-plan.md
include/core/: bitboard.h  movegen.h  perft.h  position.h  types.h  zobrist.h
include/eval/: evaluate.h  gpu_nnue.h  nnue.h  nnue_gpu.h  nnue_loader.h
include/metal/: allocator.h  device.h  gpu_ops.h
include/search/: batch_eval.h  gpu_search.h  history.h  hybrid_search.h  movepick.h  search.h  tt.h
include/syzygy/: tbprobe.h
include/uci/: uci.h
paper/: main.tex  metalfish.aux  metalfish.tex  references.bib
paper/metalfish/: metalfish.tex
proto/: net.pb.h  net.proto
proto/proto/: net.pb.cc
results/: MetalFish-AB_vs_Stockfish-L0.json
shaders/: core_ops.metal  eval.metal  hybrid_nn.metal  movegen.metal  nnue.metal  nnue_full.metal  nnue_stockfish.metal  utils.h
src/: benchmark_gpu.cpp  hybrid_benchmark.cpp  main.cpp  paper_benchmark.cpp
src/bench/: benchmark_gpu.cpp  paper_benchmark.cpp
src/core/: bitboard.cpp  bitboard.h  memory.cpp  memory.h  misc.cpp  misc.h  movegen.cpp  movegen.h  numa.h  perft.cpp  perft.h  position.cpp  position.h  shm.h  shm_linux.h  types.h  zobrist.cpp
src/eval/: accumulator_cache.cpp  accumulator_cache.h  cpu_backend.cpp  evaluate.cpp  evaluate.h  gpu_backend.h  gpu_constants.h  gpu_integration.cpp  gpu_integration.h  gpu_nnue.cpp  nnue.cpp  nnue_gpu.cpp  nnue_loader.cpp  nnue_weight_accessor.h  score.cpp  score.h
src/gpu/: backend.h  batch_ops.cpp  batch_ops.h  cpu_backend.cpp  gpu_accumulator.cpp  gpu_accumulator.h  gpu_accumulator_cache.cpp  gpu_accumulator_cache.h  gpu_constants.h  gpu_mcts_backend.cpp  gpu_mcts_backend.h  gpu_nnue.cpp  gpu_nnue.h  gpu_nnue_integration.cpp  gpu_nnue_integration.h  nnue_eval.cpp  nnue_eval.h  nnue_weight_accessor.h  persistent_pipeline.cpp  persistent_pipeline.h
src/hybrid/: ab_bridge.cpp  ab_bridge.h  classifier.cpp  classifier.h  hybrid_search.cpp  hybrid_search.h  position_adapter.cpp  position_adapter.h  shared_tt.h
src/mcts/: ab_integration.cpp  ab_integration.h  ab_integration_part2.cpp  apple_silicon.cpp  apple_silicon.h  apple_silicon_mcts.cpp  apple_silicon_mcts.h  artifacts.h  backend_adapter.cpp  backend_adapter.h  callbacks.h  core.h  enhanced_hybrid_search.cpp  enhanced_hybrid_search.h  evaluator.cpp  evaluator.h  gpu_backend.cpp  gpu_backend.h  hybrid_search.cpp  hybrid_search.h  lc0_mcts_core.h  mcts_batch_evaluator.cpp  mcts_batch_evaluator.h  mcts_core.h  mcts_tt.cpp  mcts_tt.h  nn_mcts_evaluator.cpp  nn_mcts_evaluator.h  node.cc  node.cpp  node.h  parallel_hybrid_search.cpp  parallel_hybrid_search.h  parallel_search.cpp  parallel_search.h  params.cc  params.h  (+20 more)
tests/: README_ROCM_TESTS.md  bk_parity.py  bk_test.py  bk_test_lc0.py  hybrid_regression_compare.py  nn_input_fixture.cpp  nn_input_fixture.h  paper_benchmarks.py  requirements.txt  test_analyze_lichess_games.py  test_apple_accelerator_probe.py  test_apple_coreml_microbench.py  test_apple_mpsgraph_transformer_bench.py  test_benchmark_configs.py  test_bitboard.cpp  test_common.h  test_concurrency_stress.py  test_core.cpp  test_core_comprehensive.cpp  test_cuda.cpp  test_cuda_advanced.cpp  test_cuda_optimizations.cpp  test_endgame_correctness.py  test_endgame_edge_cases.py  test_eval_gpu.cpp  test_gpu_comprehensive.cpp  test_gpu_module.cpp  test_gpu_nnue.cpp  test_hybrid.cpp  test_hybrid_arbitration_positions.py  test_hybrid_comprehensive.cpp  test_hybrid_regression_compare.py  test_lc0_comparison.cpp  test_lc0_coreml_bk_policy_probe.py  test_lc0_coreml_concurrency_benchmark.py  test_lc0_coreml_position_parity.py  test_lc0_coreml_root_value_probe.py  test_lc0_coreml_value_export.py  test_lc0_mlx_value_benchmark.py  test_lichess_bot.py  (+26 more)
tools/: analyze_hybrid_trace.py  analyze_lichess_games.py  apple_accelerator_probe.py  apple_coreml_microbench.py  apple_mpsgraph_transformer_bench.py  audit_cuda_gcp_resources.py  build_masters_book.py  build_repertoire_book.py  check_cuda_package_artifacts.py  check_cuda_runtime_manifest.py  check_nn_backend_artifacts.py  compare_bk_reports.py  compare_nn_backend_benchmarks.py  compare_nn_backend_outputs.py  compare_puzzle_runs.py  compare_uci_search_results.py  cuda_runtime_manifest_writer.py  cuda_runtime_observed.py  cuda_runtime_search_contract.py  dispatch_cuda_release_artifacts.py  dispatch_cuda_runtime_gates.py  download_engine_networks.py  elo_tournament.py  engines_config.json  fetch_cuda_gpu_gate_inputs.py  fetch_cuda_release_artifacts.py  fetch_windows_cuda_runtime_inputs.py  filter_lichess_puzzle_csv.py  github_cli.py  hybrid_wrapper.sh  import_msvc_dev_env.ps1  install_windows_cuda_toolkit.ps1  kill_all.sh  lc0_coreml_bk_policy_probe.py  lc0_coreml_concurrency_benchmark.py  lc0_coreml_position_parity.py  lc0_coreml_root_value_probe.py  lc0_coreml_value_export.py  lc0_mlx_value_benchmark.py  lichess_bot.py  (+27 more)
(+220 files in other folders)
